fixed padding i navbar collapsed

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,12 @@ body {
     margin-bottom: 20px;
     font-size: 64px;
 }
+@media only screen and (min-width: 992px) {
+  .dropdown {
+        padding-left: 1rem;
+  }
 
+}
 @media only screen and (max-width: 950px) {
     .bigtext {
         margin-bottom: 40px;
@@ -257,7 +262,7 @@ input[type=number]::-webkit-outer-spin-button {
   padding-top: 0.5rem;
   padding-right: 1rem;
   padding-bottom: 0.5rem;
-  padding-left: 1rem;
+  display: inline-block;
 }
 
 .dropdown-menu {
